# rust-on-lambda

./: README.md
cdk-typescript/: cdk.json  package.json
cdk-typescript/lib/: rust-on-lambda-stack.ts
lambda/: Cargo.toml  Dockerfile
lambda/src/: main.rs
sam/: template.yaml
sam/events/: with_message.json
