[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
http = "0.2.6"
simple-error = "0.2.3"
tokio = { version = "1.17.0", features = ["full"] }