[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
http = "0.2.9"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }